# lib2git-snippets

./: CMakeLists.txt  CMakePresets.json
example/: CMakeLists.txt  main.cpp
libgit2/: CMakeLists.txt
